# fastapi-sqlalchemy-admin-celery

./: .env  .gitignore  README.md  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: b62ace7b4fd1_first_commit.py
app/api/v1/routers/: admin_app.py
app/api/v1/routers/blog/: blog_admin.py
app/api/v1/routers/celery/: celery_admin.py  tasks.py
app/api/v1/routers/user/: user_admin.py
app/core/: celeryconfig.py  database.py  middleware.py  settings.py
app/models/: model.py
app/schemas/: user.py
app/utils/: authentication.py
